--- a/package.json
+++ b/package.json
@@ -13,11 +13,25 @@
     "@types/node": "18.11.17",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "@xata.io/client": "^0.21.6",
+    "bcrypt": "^5.1.0",
+    "chroma-js": "^2.4.2",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.0",
+    "jotai": "^1.12.0",
+    "moment": "^2.29.4",
     "next": "13.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
+    "styled-components": "^5.3.6",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/chroma-js": "^2.1.4",
+    "@types/lodash": "^4.14.191",
+    "@types/styled-components": "^5.1.26",
+    "lodash": "^4.17.21"
   }
 }
