--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "@xata.io/client": "^0.21.6",
+    "animejs": "^3.2.1",
     "bcrypt": "^5.1.0",
     "chroma-js": "^2.4.2",
     "eslint": "8.30.0",
@@ -28,6 +29,7 @@
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@types/animejs": "^3.1.6",
     "@types/bcrypt": "^5.0.0",
     "@types/chroma-js": "^2.1.4",
     "@types/lodash": "^4.14.191",
