--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "chroma-js": "^2.4.2",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.0",
+    "framer-motion": "^8.0.2",
     "jotai": "^1.12.0",
     "moment": "^2.29.4",
     "next": "13.1.0",
