--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jotai": "^1.12.0",
     "moment": "^2.29.4",
     "next": "13.1.0",
+    "next-auth": "^4.18.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
