--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "animejs": "^3.2.1",
     "bcrypt": "^5.1.0",
     "chroma-js": "^2.4.2",
+    "d3": "^7.8.0",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.0",
     "framer-motion": "^8.0.2",
@@ -34,6 +35,7 @@
     "@types/animejs": "^3.1.6",
     "@types/bcrypt": "^5.0.0",
     "@types/chroma-js": "^2.1.4",
+    "@types/d3": "^7.4.0",
     "@types/lodash": "^4.14.191",
     "@types/styled-components": "^5.1.26",
     "lodash": "^4.17.21"
